# AI_solo_coder_task_A_077

./: README.md  docker-compose.yml  prometheus.yml
backend/: Cargo.toml  Dockerfile  config.docker.toml  config.toml
backend/src/: alarm_commander.rs  api.rs  clickhouse_client.rs  collision_predictor.rs  config.rs  constellation_receiver.rs  lib.rs  main.rs  models.rs  orbit_optimizer.rs  orbit_optimizer_service.rs  sgp4_engine.rs  udp_receiver.rs
clickhouse/: init.sql
frontend/: index.html  orbit_3d_viewer.js  sat_detail.js
simulator/: Dockerfile  constellation_simulator.py
