[package]
name = "satellite-constellation-system"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clickhouse = { version = "0.13", features = ["chrono", "uuid"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
thiserror = "1"
toml = "0.8"
anyhow = "1"
socket2 = "0.5"
bytes = "1"
tokio-tungstenite = "0.21"
futures = "0.3"
